<resources>
    <string name="app_name">VideoCutNTrim</string>

    <!-- Button Strings -->
    <string name="btn_create_story">Create Story</string>
    <string name="btn_edit_story">Edit Story</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_cut">Cut</string>
    <string name="btn_add_container">Add</string>
    <string name="btn_delete_container">Delete</string>
    <string name="btn_create">Create Story</string>
    <string name="btn_record">Record Audio</string>
    <string name="btn_story_play">Play Story</string>
    <string name="btn_stop_story_play">Stop</string>

    <string name="btn_start_recording">Record</string>
    <string name="btn_stop_recording">Stop</string>

    <string name="btn_play_audio">Play</string>
    <string name="btn_stop_audio">Stop</string>

    <!-- TextView Strings -->
    <string name="tv_start_time">00:00:00</string>
    <string name="tv_end_time">00:00:00</string>

    <!-- Content Descriptions -->
    <string name="cd_iv_film_roll">Film Roll</string>
    <string name="cd_iv_container">Container</string>

</resources>
