<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.deepaksood.videocutntrim.activities.EditStory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">

        <VideoView
            android:id="@+id/vv_player"
            android:layout_width="320dp"
            android:layout_height="240dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_browse"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cut"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cut_controller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.appyvet.rangebar.RangeBar
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rb_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                custom:tickStart="0"
                custom:tickInterval="1"
                custom:tickEnd="10"
                custom:rangeBarColor="@color/rangeBarColor"
                custom:tickColor="@color/tickColor"
                custom:pinColor="@color/pinColor"
                custom:connectingLineColor="@color/connectingLineColor"
                custom:selectorColor="@color/selectorColor"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/tv_start_time" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/tv_end_time" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
